tests/fail/positional.rs
use syner::Syner;

#[derive(Syner)]
struct Positional(usize, bool, String);

fn main() {
}